--- a/oracle/索引.md
+++ b/oracle/索引.md
@@ -1,5 +1,23 @@
-- 草稿
-```SQL
+### 目标
+>了解oracle11g的索引的分类  
+理解oracle11g的索引查找的原理  
+能够根据情况建立合适的索引
+
+### 介绍
+>索引是与表相关的一个可选结构  
+用以提高 SQL 语句执行的性能  
+减少磁盘I/O  
+使用 CREATE INDEX 语句创建索引  
+在逻辑上和物理上都独立于表的数据  
+Oracle 自动维护索引  
+
+-索引分类
+>索引分为：B树索引（平衡树索引）、位图索引。
+>>B树索引分为：唯一索引、组合索引、反向键索引、基于函数的索引
+
+![image](https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3991466571,4153450085&fm=27&gp=0.jpg)
+
+```
 B树索引最常见，存储逻辑不一样，位图索引用在数据仓库多点。
 索引能指向表里面的数据
 索引内部结构：根->分支->叶子。
@@ -17,13 +35,107 @@ B1块存放0-500的索引。
 数据库表所有数据行在索引上的值。
 
 B树索引要特别理解。
+```
 
+- 创建标准索引
+>CREATE INDEX item_index ON itemfile (itemcode)
+     TABLESPACE index_tbs;
+
+- 分析索引 
+>analyze index <index_name> validate structure;
+>>查看index_stats表中的pct_used列的值，如果pct_used的值过低，说明在索引中存在碎片，可以重建索引，来提高pct_used的值，减少索引中的碎片。
+
+- 唯一索引
+>唯一索引确保在定义索引的列中没有重复值  
+Oracle 自动在表的主键列上创建唯一索引
+使用CREATE UNIQUE   INDEX语句创建唯一索引
+>>CREATE UNIQUE INDEX item_index  
+ON itemfile (itemcode);
+
+- 组合索引
+>组合索引是在表的多个列上创建的索引  
+索引中列的顺序是任意的  
+如果 SQL 语句的 WHERE子句中引用了组合索引的所有列或大多数列，则可以提高检索速度
+>>CREATE INDEX comp_index  
+ON itemfile(p_category, itemrate);
+
+- 反向键索引
+>反向键索引反转索引列键值的每个字节
+通常建立在值是连续增长的列上，使数据均匀地分布在整个索引上  
+创建索引时使用REVERSE关键字  
+```SQL
+CREATE INDEX rev_index 
+ON itemfile (itemcode) REVERSE;
+
+ALTER INDEX rev_index REBUID NOREVERSE;
+```
+- 位图索引
+位图索引适合创建在低基数列上  
+位图索引不直接存储ROWID，而是存储字节位到ROWID的映射  
+节省空间占用  
+如果索引列被经常更新的话，不适合建立位图索引  
+总体来说，位图索引适合于数据仓库中，不适合OLTP中
+>>CREATE BITMAP INDEX bit_index  
+ON order_master (orderno);
+
+- 基于函数的索引
+>基于一个或多个列上的函数或表达式创建的索引  
+表达式中不能出现聚合函数  
+不能在LOB类型的列上创建  
+创建时必须具有 QUERY REWRITE 权限
+```SQL
+CREATE INDEX lowercase_idx 
+ON toys (LOWER(toyname));
+
+SELECT toyid FROM toys
+WHERE LOWER(toyname)='doll';
+```
+- 重建索引
+`ALTER INDEX index_name REBUILD [ONLINE] [NOLOGGING] [COMPUTE STATISTICS];`
+>ONLINE使得在重建索引过程中，用户可用对原来的索引进行修改；  
+NOLOGGING表示在重建过程中产生最少的重做条目redo Entry；  
+COMPUTE STATISTICS表示在重建过程中就生成了oracle优化器所需的统计信息，避免了索引重建之后再进行analyze或dbms_stats来收集统计信息。
+
+- 删除索引 
+>DROP INDEX item_index;
+
+### 索引的分区
+>可以将索引存储在不同的分区中  
+与分区有关的索引有三种类型：  
+>>局部分区索引 － 在分区表上创建的索引，在每个表分区上创建独立的索引，索引的分区范围与表一致  
+全局分区索引 － 在分区表或非分区表上创建的索引，索引单独指定分区的范围，与表的分区范围或是否分区无关  
+全局非分区索引 － 在分区表上创建的全局普通索引，索引没有被分区  
+
+- 获取索引的信息
+>与索引有关的数据字典视图有：
+>>USER_INDEXES － 用户创建的索引的信息  
+USER_IND_PARTITIONS － 用户创建的分区索引的信息  
+USER_IND_COLUMNS － 与索引相关的表列的信息  
+```SQL
+SELECT INDEX_NAME, TABLE_NAME, COLUMN_NAME
+FROM USER_IND_COLUMNS
+ORDER BY INDEX_NAME, COLUMN_POSITION;
+```
+
+- 草稿
+```SQL
 create index ind1 on student(sno);
+Index created
 
 select *from user_indexes;
 
+INDEX_NAME                     INDEX_TYPE                  TABLE_OWNER                    TABLE_NAME                     TABLE_TYPE  UNIQUENESS COMPRESSION PREFIX_LENGTH TABLESPACE_NAME                 INI_TRANS  MAX_TRANS INITIAL_EXTENT NEXT_EXTENT MIN_EXTENTS MAX_EXTENTS PCT_INCREASE PCT_THRESHOLD INCLUDE_COLUMN  FREELISTS FREELIST_GROUPS   PCT_FREE LOGGING     BLEVEL LEAF_BLOCKS DISTINCT_KEYS AVG_LEAF_BLOCKS_PER_KEY AVG_DATA_BLOCKS_PER_KEY CLUSTERING_FACTOR STATUS     NUM_ROWS SAMPLE_SIZE LAST_ANALYZED DEGREE                                   INSTANCES                                PARTITIONED TEMPORARY GENERATED SECONDARY BUFFER_POOL FLASH_CACHE CELL_FLASH_CACHE USER_STATS DURATION        PCT_DIRECT_ACCESS ITYP_OWNER                     ITYP_NAME                      PARAMETERS                                                                       GLOBAL_STATS DOMIDX_STATUS DOMIDX_OPSTATUS FUNCIDX_STATUS JOIN_INDEX IOT_REDUNDANT_PKEY_ELIM DROPPED VISIBILITY DOMIDX_MANAGEMENT SEGMENT_CREATED
+------------------------------ --------------------------- ------------------------------ ------------------------------ ----------- ---------- ----------- ------------- ------------------------------ ---------- ---------- -------------- ----------- ----------- ----------- ------------ ------------- -------------- ---------- --------------- ---------- ------- ---------- ----------- ------------- ----------------------- ----------------------- ----------------- -------- ---------- ----------- ------------- ---------------------------------------- ---------------------------------------- ----------- --------- --------- --------- ----------- ----------- ---------------- ---------- --------------- ----------------- ------------------------------ ------------------------------ -------------------------------------------------------------------------------- ------------ ------------- --------------- -------------- ---------- ----------------------- ------- ---------- ----------------- ---------------
+PK_CITY                        NORMAL                      ZSR                            CITY                           TABLE       UNIQUE     DISABLED                  SYSTEM                                  2        255          65536     1048576           1  2147483645                                                    1               1         10 YES              0           0             0                       0                       0                 0 VALID             0           0 2018/6/3 12:0 1                                        1                                        NO          N         N         N         DEFAULT     DEFAULT     DEFAULT          NO                                                                                                                                                                                          YES                                                       NO         NO                      NO      VISIBLE                      YES
+PK_EMPLOYEE                    NORMAL                      ZSR                            EMPLOYEE                       TABLE       UNIQUE     DISABLED                  SYSTEM                                  2        255          65536     1048576           1  2147483645                                                    1               1         10 YES              0           1             9                       1                       1                 1 VALID             9           9 2018/7/5 22:0 1                                        1                                        NO          N         N         N         DEFAULT     DEFAULT     DEFAULT          NO                                                                                                                                                                                          YES                                                       NO         NO                      NO      VISIBLE                      YES
+IND1                           NORMAL                      ZSR                            STUDENT                        TABLE       NONUNIQUE  DISABLED                  SYSTEM                                  2        255          65536     1048576           1  2147483645                                                    1               1         10 YES              0           1             8                       1                       1                 1 VALID             8           8 2018/7/7 7:03 1                                        1                                        NO          N         N         N         DEFAULT     DEFAULT     DEFAULT          NO                                                                                                                                                                                          NO                                                        NO         NO                      NO      VISIBLE                      YES
+
 select *from user_ind_columns u
 where u.index_name='IND1';
+
+INDEX_NAME                     TABLE_NAME                     COLUMN_NAME                                                                      COLUMN_POSITION COLUMN_LENGTH CHAR_LENGTH DESCEND
+------------------------------ ------------------------------ -------------------------------------------------------------------------------- --------------- ------------- ----------- -------
+IND1                           STUDENT                        SNO                                                                                            1            22           0 ASC
 
 分析索引
 索引块的数据可能被删除，有效数据少了。那么索引块会存在碎片，降低性功能。
@@ -31,31 +143,48 @@ where u.index_name='IND1';
 create table t(c1 char(8));
 
 begin
-  for i in i..1300000 loop
-     insert into t values(ltrim(tochar(i), '00000009'));
+  for i in 1..1300000 loop
+     insert into t values(ltrim(to_char(i), '00000009'));
 	 if mod(i,100)=0 then
 	   commit;
 	 end if;
    end loop;
+end;
 /
 
+--还没创建索引，130万条数据，查询select *from t where c1='1000000';耗时0.125;
 --创建索引
 create index ind_t on t(c1);
+
+--创建索引后，130万条数据，查询select *from t where c1='1000000';耗时0.031;
 
 --分析索引
 analyze index ind_t validate structure;
 
+Index analyzed
+
 --查看索引使用率与碎片。默认最多只能插满90%
 select name,pct_used from index_stats where name='IND_T';
 
+NAME                             PCT_USED
+------------------------------ ----------
+IND_T                                  90
+
 --删除一部分数据
-delete t where rownum < 1000000;
+delete t where rownum < 110000;
 commit;
+
+SQL> analyze index ind_t validate structure;
+
+Index analyzed
 
 --oracle会自动分析索引
 --查看索引使用率与碎片。默认最多只能插满90%
-select name,pct_used from index_stats where name='IND_T';
+SQL> select name,pct_used from index_stats where name='IND_T';
 
+NAME                             PCT_USED
+------------------------------ ----------
+IND_T                                  88
 
 --如果发现索引使用率过低
 --重建索引
@@ -66,6 +195,10 @@ analyze index ind_t validate structure;
 
 --查看索引使用率与碎片。默认最多只能插满90%
 select name,pct_used from index_stats where name='IND_T';
+
+NAME                             PCT_USED
+------------------------------ ----------
+IND_T                                  90
 
 --唯一索引
 create unique index ind_sno on student(sno);
@@ -89,7 +222,7 @@ create index ind1 on 表（多个列）;
 --用0101来指明数据放哪里
 select *from student;
 
-create bitmap index ind2 on student(mail)
+create bitmap index ind2 on student(性别)
 
 --【基于函数的索引】
 select *from student where sname ='TOM';
@@ -102,15 +235,15 @@ create index ind3 on student(upper(sname));
 --创建分区表
 create table employee1（code number,name varchar2(10)）
 partition by range(code)(
-  partition p1 values less than(1000),
-  partition p2 values less than(2000),
+  partition p1 values less than(200000),
+  partition p2 values less than(300000),
   partition p3 values less than(maxvalue),
 )
 
 --局部分区索引
 create index ind_empoyee1 on employee1（code) local;
 
---
+--查看索引视图
 select u.index_name,u.table_name,u.partitioned from user_indexes u;
 
 --如何查看分区索引的详细信息
