--- a/elasticsearch/01 概述.md
+++ b/elasticsearch/01 概述.md
@@ -36,5 +36,64 @@ eth1      Link encap:Ethernet  HWaddr 00:0C:29:80:E3:8B
           collisions:0 txqueuelen:1000 
           RX bytes:339033358 (323.3 MiB)  TX bytes:13086991 (12.4 MiB)
           Interrupt:19 Base address:0x2024 
+          
+不能用root账号启动
+java.lang.RuntimeException: can not run elasticsearch as root
+
+chmod  777 elasticsearch-5.1.1 -R  
+
+[root@localhost software]# useradd zsr
+[root@localhost software]# passwd zsr
+Changing password for user zsr.
+New password: 
+BAD PASSWORD: it is WAY too short
+BAD PASSWORD: is too simple
+Retype new password: 
+passwd: all authentication tokens updated successfully.
+
+max virtual memory areas vm.max_map_count [65530] is too low, increase to at least [262144]
+
+[zsr@localhost elasticsearch-5.1.1]$ ./bin/elasticsearch -Xmx2g -Xms2g
+starts elasticsearch
+
+Option                Description                                              
+------                -----------                                              
+-E <KeyValuePair>     Configure a setting                                      
+-V, --version         Prints elasticsearch version information and exits       
+-d, --daemonize       Starts Elasticsearch in the background                   
+-h, --help            show help                                                
+-p, --pidfile <Path>  Creates a pid file in the specified path on start        
+-q, --quiet           Turns off standard ouput/error streams logging in console
+-s, --silent          show minimal output                                      
+-v, --verbose         show verbose output                                      
+ERROR: X is not a recognized option
+
+- ElasticSearch的内存设置
+https://www.cnblogs.com/atomicbomb/p/7903459.html
+
+vm.max_map_count=262144
+
+- Ubuntu elasticsearch max virtual memory areas vm.max_map_count [65530] is too low, increase to at le
+https://blog.csdn.net/jiankunking/article/details/65448030
+
+- max file descriptors [4096] for elasticsearch process is too low, increase to at least [65536]
+https://www.cnblogs.com/yidiandhappy/p/7714481.html
+
+- 编程实践6—Elasticsearch5.0 最新版本安装问题
+https://blog.csdn.net/abcd_d_/article/details/53018927
+
+#@student        hard    nproc           20
+#@faculty        soft    nproc           20
+#@faculty        hard    nproc           50
+#ftp             hard    nproc           0
+#@student        -       maxlogins       4
+zsr soft nofile 65536
+zsr hard nofile 65536
+# End of file
+
+- bootstrap.memory_lock: true导致Elasticsearch启动失败问题
+https://www.cnblogs.com/zhzhang/p/6741070.html
+
+Linux出现out of memory:Kill process 2324
 ```
 		
