--- a/elasticsearch/01 概述.md
+++ b/elasticsearch/01 概述.md
@@ -96,4 +96,18 @@ https://www.cnblogs.com/zhzhang/p/6741070.html
 
 Linux出现out of memory:Kill process 2324
 ```
+
+### 走近elasticsearch
+>能对海量规模数据完成实时分析，完成分布式索引与检索，提供数据聚合功能，应用非常广泛。  
+github、sony、stackoverflow、Mozilla
+
+#### elasticsearch是什么
+>开源搜索服务项目，提供全文检索、高效分布式数据存储、索引、搜索，能对大数据的自动分片、自动负载索引，并提供restful web风格接口。  
+它是面向文档型的nosql数据库，可在elasticsearch中索引、搜索、排序和过滤这些文档。  
+继承了Lucene简洁语法，同时：  
+>>①分布式实时文件存储；  
+②实时分析的分布式搜索引擎；  
+③可扩展上百台服务，处理PB数据。  
+此外，它支持插件机制，eg.MongoDB、couchDB同步River插件、
+中文分词插件、hadoop插件、脚本支持插件等。
 		
