--- a/elasticsearch/01 概述.md
+++ b/elasticsearch/01 概述.md
@@ -111,3 +111,6 @@ github、sony、stackoverflow、Mozilla
 此外，它支持插件机制，eg.MongoDB、couchDB同步River插件、
 中文分词插件、hadoop插件、脚本支持插件等。
 		
+#### elasticsearch涉及的概念
+>- cluster和node——elasticsearch中的cluster是对外提供搜索服务的集群，组成这个cluster的各个节点叫node。
+>- Shards——elasticsearch将一个完整的索引分为若干部分，每个部分就是一个shards，每个shard是一个基于Lucene的索引。
