实战之电商网站商品管理v1.1
简单的集群管理

--- a/elasticsearch/practice/02 实战之电商网站商品管理.md
+++ b/elasticsearch/practice/02 实战之电商网站商品管理.md
@@ -65,3 +65,29 @@ employee_info表：bio，age，interests，3个字段；此外还有一个外键
 （3）可以执行简单的全文检索，以及复杂的phrase（短语）检索；  
 （4）对于全文检索的结果，可以进行高亮显示；  
 （5）对数据进行简单的聚合分析。
+
+### 简单的集群管理
+- 快速检查集群的健康状况
+>es提供了一套api，叫做cat api，可以查看es中各种各样的数据  
+
+`GET /_cat/health?v`
+```
+epoch      timestamp cluster       status node.total node.data shards pri relo init unassign pending_tasks max_task_wait_time active_shards_percent
+1488006741 15:12:21  elasticsearch yellow          1         1      1   1    0    0        1             0                  -                 50.0%
+
+epoch      timestamp cluster       status node.total node.data shards pri relo init unassign pending_tasks max_task_wait_time active_shards_percent
+1488007113 15:18:33  elasticsearch green           2         2      2   1    0    0        0             0                  -                100.0%
+
+epoch      timestamp cluster       status node.total node.data shards pri relo init unassign pending_tasks max_task_wait_time active_shards_percent
+1488007216 15:20:16  elasticsearch yellow          1         1      1   1    0    0        1             0                  -                 50.0%
+```
+
+- 如何快速了解集群的健康状况？
+
+>green：每个索引的primary shard和replica shard都是active状态的;
+yellow：每个索引的primary shard都是active状态的，但是部分replica shard不是active状态，处于不可用的状态;
+red：不是所有索引的primary shard都是active状态的，部分索引有数据丢失了.
+
+- 为什么现在会处于一个yellow状态？
+>我们现在就一个笔记本电脑，就启动了一个es进程，相当于就只有一个node。现在es中有一个index，就是kibana自己内置建立的index。由于默认的配置是给每个index分配5个primary shard和5个replica shard，而且primary shard和replica shard不能在同一台机器上（为了容错）。现在kibana自己建立的index是1个primary shard和1个replica shard。当前就一个node，所以只有1个primary shard被分配了和启动了，但是一个replica shard没有第二台机器去启动。  
+>>做一个小实验：此时只要启动第二个es进程，就会在es集群中有2个node，然后那1个replica shard就会自动分配过去，然后cluster status就会变成green状态。
