实战之电商网站商品管理v1.3
多种搜索方式

--- a/elasticsearch/practice/02 实战之电商网站商品管理.md
+++ b/elasticsearch/practice/02 实战之电商网站商品管理.md
@@ -277,6 +277,94 @@ DELETE /ecommerce/product/1
   "found": false
 }
 ```
+### 多种搜索方式
+>1、query string search;  
+2、query DSL;  
+3、query filter;  
+4、full-text search;  
+5、phrase search;  
+6、highlight search.
+
+- 1、query string search
+
+>搜索全部商品：GET /ecommerce/product/_search
+
+>took：耗费了几毫秒;  
+timed_out：是否超时，这里是没有;  
+_shards：数据拆成了5个分片，所以对于搜索请求，会打到所有的primary shard（或者是它的某个replica shard也可以）;  
+hits.total：查询结果的数量，3个document;  
+hits.max_score：score的含义，就是document对于一个search的相关度的匹配分数，越相关，就越匹配，分数也高;  
+hits.hits：包含了匹配搜索的document的详细数据.  
+
+```
+{
+  "took": 2,
+  "timed_out": false,
+  "_shards": {
+    "total": 5,
+    "successful": 5,
+    "failed": 0
+  },
+  "hits": {
+    "total": 3,
+    "max_score": 1,
+    "hits": [
+      {
+        "_index": "ecommerce",
+        "_type": "product",
+        "_id": "2",
+        "_score": 1,
+        "_source": {
+          "name": "jiajieshi yagao",
+          "desc": "youxiao fangzhu",
+          "price": 25,
+          "producer": "jiajieshi producer",
+          "tags": [
+            "fangzhu"
+          ]
+        }
+      },
+      {
+        "_index": "ecommerce",
+        "_type": "product",
+        "_id": "1",
+        "_score": 1,
+        "_source": {
+          "name": "gaolujie yagao",
+          "desc": "gaoxiao meibai",
+          "price": 30,
+          "producer": "gaolujie producer",
+          "tags": [
+            "meibai",
+            "fangzhu"
+          ]
+        }
+      },
+      {
+        "_index": "ecommerce",
+        "_type": "product",
+        "_id": "3",
+        "_score": 1,
+        "_source": {
+          "name": "zhonghua yagao",
+          "desc": "caoben zhiwu",
+          "price": 40,
+          "producer": "zhonghua producer",
+          "tags": [
+            "qingxin"
+          ]
+        }
+      }
+    ]
+  }
+}
+```
+>query string search的由来，因为search参数都是以http请求的query string来附带的;  
+搜索商品名称中包含yagao的商品，而且按照售价降序排序：GET /ecommerce/product/_search?q=name:yagao&sort=price:desc;  
+适用于临时的在命令行使用一些工具，比如curl，快速的发出请求，来检索想要的信息；但是如果查询请求很复杂，是很难去构建的
+在生产环境中，几乎很少使用query string search.
+
+
 
 
 
