--- a/elasticsearch/practice/02 实战之电商网站商品管理.md
+++ b/elasticsearch/practice/02 实战之电商网站商品管理.md
@@ -364,9 +364,178 @@ hits.hits：包含了匹配搜索的document的详细数据.
 适用于临时的在命令行使用一些工具，比如curl，快速的发出请求，来检索想要的信息；但是如果查询请求很复杂，是很难去构建的
 在生产环境中，几乎很少使用query string search.
 
+### 嵌套聚合，下钻分析，聚合分析
+- 第一个分析需求：计算每个tag下的商品数量
+```
+GET /ecommerce/product/_search
+{
+  "aggs": {
+    "group_by_tags": {
+      "terms": { "field": "tags" }
+    }
+  }
+}
+```
+- 将文本field的fielddata属性设置为true
+```
+PUT /ecommerce/_mapping/product
+{
+  "properties": {
+    "tags": {
+      "type": "text",
+      "fielddata": true
+    }
+  }
+}
 
+GET /ecommerce/product/_search
+{
+  "size": 0,
+  "aggs": {
+    "all_tags": {
+      "terms": { "field": "tags" }
+    }
+  }
+}
 
+{
+  "took": 20,
+  "timed_out": false,
+  "_shards": {
+    "total": 5,
+    "successful": 5,
+    "failed": 0
+  },
+  "hits": {
+    "total": 4,
+    "max_score": 0,
+    "hits": []
+  },
+  "aggregations": {
+    "group_by_tags": {
+      "doc_count_error_upper_bound": 0,
+      "sum_other_doc_count": 0,
+      "buckets": [
+        {
+          "key": "fangzhu",
+          "doc_count": 2
+        },
+        {
+          "key": "meibai",
+          "doc_count": 2
+        },
+        {
+          "key": "qingxin",
+          "doc_count": 1
+        }
+      ]
+    }
+  }
+}
+```
+- 第二个聚合分析的需求：对名称中包含yagao的商品，计算每个tag下的商品数量
 
+```
+GET /ecommerce/product/_search
+{
+  "size": 0,
+  "query": {
+    "match": {
+      "name": "yagao"
+    }
+  },
+  "aggs": {
+    "all_tags": {
+      "terms": {
+        "field": "tags"
+      }
+    }
+  }
+}
+```
+- 第三个聚合分析的需求：先分组，再算每组的平均值，计算每个tag下的商品的平均价格
 
+```
+GET /ecommerce/product/_search
+{
+    "size": 0,
+    "aggs" : {
+        "group_by_tags" : {
+            "terms" : { "field" : "tags" },
+            "aggs" : {
+                "avg_price" : {
+                    "avg" : { "field" : "price" }
+                }
+            }
+        }
+    }
+}
 
+{
+  "took": 8,
+  "timed_out": false,
+  "_shards": {
+    "total": 5,
+    "successful": 5,
+    "failed": 0
+  },
+  "hits": {
+    "total": 4,
+    "max_score": 0,
+    "hits": []
+  },
+  "aggregations": {
+    "group_by_tags": {
+      "doc_count_error_upper_bound": 0,
+      "sum_other_doc_count": 0,
+      "buckets": [
+        {
+          "key": "fangzhu",
+          "doc_count": 2,
+          "avg_price": {
+            "value": 27.5
+          }
+        },
+        {
+          "key": "meibai",
+          "doc_count": 2,
+          "avg_price": {
+            "value": 40
+          }
+        },
+        {
+          "key": "qingxin",
+          "doc_count": 1,
+          "avg_price": {
+            "value": 40
+          }
+        }
+      ]
+    }
+  }
+}
+```
 
+- 第四个数据分析需求：计算每个tag下的商品的平均价格，并且按照平均价格降序排序
+
+```
+GET /ecommerce/product/_search
+{
+    "size": 0,
+    "aggs" : {
+        "all_tags" : {
+            "terms" : { "field" : "tags", "order": { "avg_price": "desc" } },
+            "aggs" : {
+                "avg_price" : {
+                    "avg" : { "field" : "price" }
+                }
+            }
+        }
+    }
+}
+```
+
+>现在全部都是用es的restful api在学习和讲解es的所欲知识点和功能点，但没有使用一些编程语言去讲解，原因如下：
+>>- 1、es最重要的api，让我们进行各种尝试、学习甚至在某些环境下进行使用的api，就是restful api。如果你学习不用es restful api，比如用java api来讲es，也是可以的，但是你根本就漏掉了es知识的一大块，你都不知道它最重要的restful api是怎么用的;
+>>- 2、讲知识点，用es restful api，更加方便，快捷，不用每次都写大量的java代码，能加快讲课的效率和速度，更加易于同学们关注es本身的知识和功能的学习;
+>>- 3、通常讲完es知识点后，开始详细讲解java api，如何用java api执行各种操作。
