实战之电商网站商品管理v1.6
query DSL、query filter、full-text search、phrase search、highlight search

--- a/elasticsearch/practice/02 实战之电商网站商品管理.md
+++ b/elasticsearch/practice/02 实战之电商网站商品管理.md
@@ -366,6 +366,124 @@ hits.hits：包含了匹配搜索的document的详细数据.
 适用于临时的在命令行使用一些工具，比如curl，快速的发出请求，来检索想要的信息；但是如果查询请求很复杂，是很难去构建的
 在生产环境中，几乎很少使用query string search.
 
+- 2、query DSL  
+>DSL：Domain Specified Language，特定领域的语言
+http request   body：请求体，可以用json的格式来构建查询语法，比较方便，可以构建各种复杂的语法，比query string search强大很多
+
+- 查询所有的商品
+```
+GET /ecommerce/product/_search
+{
+  "query": { "match_all": {} }
+}
+```
+- 查询名称包含yagao的商品，同时按照价格降序排序
+```
+GET /ecommerce/product/_search
+{
+    "query" : {
+        "match" : {
+            "name" : "yagao"
+        }
+    },
+    "sort": [
+        { "price": "desc" }
+    ]
+}
+```
+- 分页查询商品，总共3条商品，假设每页就显示1条商品，现在显示第2页，所以就查出来第2个商品
+```
+GET /ecommerce/product/_search
+{
+  "query": { "match_all": {} },
+  "from": 1,
+  "size": 1
+}
+```
+- 指定要查询出来商品的名称和价格就可以
+
+```
+GET /ecommerce/product/_search
+{
+  "query": { "match_all": {} },
+  "_source": ["name", "price"]
+}
+```
+更加适合生产环境的使用，可以构建复杂的查询
+
+- 3、query filter
+- 搜索商品名称包含yagao，而且售价大于25元的商品
+```
+GET /ecommerce/product/_search
+{
+    "query" : {
+        "bool" : {
+            "must" : {
+                "match" : {
+                    "name" : "yagao" 
+                }
+            },
+            "filter" : {
+                "range" : {
+                    "price" : { "gt" : 25 } 
+                }
+            }
+        }
+    }
+}
+```
+- 4、full-text search（全文检索）
+```
+GET /ecommerce/product/_search
+{
+    "query" : {
+        "match" : {
+            "producer" : "yagao producer"
+        }
+    }
+}
+```
+>无论是学什么技术，一定自己动手，特别是手工敲各种命令和代码，减少复制粘贴的操作。只有自己动手手工敲，学习效果才最好。
+
+>producer这个字段，会先被拆解，建立倒排索引
+>>special		4  
+yagao		4  
+producer	1,2,3,4  
+gaolujie	1  
+zhognhua	3  
+jiajieshi	2  
+yagao producer ---> yagao和producer
+
+- 5、phrase search（短语搜索）
+>跟全文检索相反，全文检索会将输入的搜索串拆解开来，去倒排索引里面去一一匹配，只要能匹配上任意一个拆解后的单词，就可以作为结果返回;  
+phrase search，要求输入的搜索串，必须在指定的字段文本中，完全包含一模一样的，才算匹配，才能作为结果返回.
+```
+GET /ecommerce/product/_search
+{
+    "query" : {
+        "match_phrase" : {
+            "producer" : "yagao producer"
+        }
+    }
+}
+```
+- 6、highlight search（高亮搜索结果）
+```
+GET /ecommerce/product/_search
+{
+    "query" : {
+        "match" : {
+            "producer" : "producer"
+        }
+    },
+    "highlight": {
+        "fields" : {
+            "producer" : {}
+        }
+    }
+}
+```
+
 ### 嵌套聚合，下钻分析，聚合分析
 - 第一个分析需求：计算每个tag下的商品数量
 ```
