--- a/elasticsearch/practice/03 基础分布式架构.md
+++ b/elasticsearch/practice/03 基础分布式架构.md
@@ -30,4 +30,36 @@
 >- 自动请求路由
 >- 响应收集
 
+![image](https://raw.githubusercontent.com/nanphonfy/note-images/master/bigdata-cookbook/elasticsearch/practice/03/ES%E7%9A%84%E5%9F%BA%E7%A1%80%E5%88%86%E5%B8%83%E5%BC%8F%E6%9E%B6%E6%9E%84.png)
+
+### 二、shard&replica机制梳理+单node环境创建index
+>1、shard&replica机制再次梳理；  
+2、图解单node环境下创建index是什么样子的。
+
+#### 1、shard&replica机制梳理
+>（1）index包含多个shard；  
+（2）每个shard都是一个最小工作单元，承载部分数据，lucene实例，拥有完整地建立索引和处理请求的能力；  
+（3）增减节点时，shard会自动在nodes中负载均衡；  
+（4）primary shard和replica shard，每个document肯定只存在于某一个primary shard以及其对应的replica shard中，不可能存在于多个primary shard；  
+（5）replica shard是primary shard的副本，负责容错，以及承担读请求负载；  
+（6）primary shard的数量在创建索引的时候就固定了，replica shard的数量可以随时修改；  
+（7）primary shard的默认数量是5，replica默认是1（是指每个primary对应一个replica），默认有10个shard，5个primary shard，5个replica shard；  
+（8）primary shard不能和自己的replica shard放在同一个节点上（否则节点宕机，primary shard和副本都丢失，起不到容错作用），但可以和其他primary shard的replica shard放在同一个节点上。
+
+#### 2、图解单node环境下创建index是什么样子
+>（1）单node环境下，创建一个index，有3个primary shard，3个replica shard;  
+（2）集群status是yellow;  
+（3）这时只会将3个primary shard分配到仅有的一个node上去，另外3个replica shard是无法分配的;  
+（4）集群可正常工作，但一旦出现节点宕机，数据全部丢失，且集群不可用，无法承接任何请求。
+- 设置单节点，3个primary shard和3个replica shard
+```java  
+PUT /test_index
+{
+   "settings" : {
+      "number_of_shards" : 3,
+      "number_of_replicas" : 1
+   }
+}
+```
+
 ![image](https://raw.githubusercontent.com/nanphonfy/note-images/master/bigdata-cookbook/elasticsearch/practice/03/shard%26replica%E6%9C%BA%E5%88%B6.png)
