es基础分布式架构v1.2
2个node的replica shard分配

--- a/elasticsearch/practice/03 基础分布式架构.md
+++ b/elasticsearch/practice/03 基础分布式架构.md
@@ -63,3 +63,10 @@ PUT /test_index
 ```
 
 ![image](https://raw.githubusercontent.com/nanphonfy/note-images/master/bigdata-cookbook/elasticsearch/practice/03/shard%26replica%E6%9C%BA%E5%88%B6.png)
+
+### 3.图解2个node环境下replica shard是如何分配的
+>（1）replica shard分配：3个primary shard，3个replica shard，1 node;  
+（2）primary ---> replica同步;  
+（3）读请求：primary/replica.
+
+![image](https://raw.githubusercontent.com/nanphonfy/note-images/master/bigdata-cookbook/elasticsearch/practice/03/2_node_replica_shard.png)
