06 ES并发冲突问题v1.1
悲观锁与乐观锁两种并发控制方案

--- a/elasticsearch/practice/06 ES并发冲突问题.md
+++ b/elasticsearch/practice/06 ES并发冲突问题.md
@@ -1,4 +1,4 @@
-### 深度图解剖析Elasticsearch并发冲突问题
+### 一、深度图解剖析Elasticsearch并发冲突问题
 >电商场景：  
 `程序工作流程：①读取商品信息(包括商品库存)；②用户下单；③更新商品信息(将库存减一)。`
 
@@ -15,3 +15,18 @@
 >①先get document，商品信息，显示到网页，同时在内存中缓存该document数据；  
 ②当网页发起购买，直接基于内存的数据，进行计算和操作；  
 ③将计算后的结果写回ES中。
+
+### 二、深度图解剖析悲观锁与乐观锁两种并发控制方案
+#### 1.悲观锁并发控制方案
+>各种情况都上锁，上锁后只有一个线程可操作这一条数据。不同场景，上的锁不同：行级锁、表级锁、读锁、写锁。
+
+#### 2.悲观锁与乐观锁
+>- ①悲观锁优点：方便，直接加锁对应用程序透明、不需额外操作。  
+>- 缺点：并发能力很低，同一时间只能有一条线程操作数据。  
+
+>- ②乐观锁优点：并发能力很高，不给数据加锁，大量线程并发操作。
+>- 缺点：麻烦，每次更新时都先比对版本号，再重新加载数据，再修改、写。整个过程可能重复好几次。
+
+>线程B去判断当前数据的版本号：version=1，与es数据的版本号：version=2，是否相同。  
+版本号不同，说明数据已经被其他人修改过，此时用户B不会去更新，而是重新从es中读取最新的数据版本——99件，再次减1，变为98件，再执行上述流程，就可写入。
+
