06 ES并发冲突问题v1.2
上机演练：基于_version进行乐观锁并发控制

--- a/elasticsearch/practice/06 ES并发冲突问题.md
+++ b/elasticsearch/practice/06 ES并发冲突问题.md
@@ -30,3 +30,118 @@
 >线程B去判断当前数据的版本号：version=1，与es数据的版本号：version=2，是否相同。  
 版本号不同，说明数据已经被其他人修改过，此时用户B不会去更新，而是重新从es中读取最新的数据版本——99件，再次减1，变为98件，再执行上述流程，就可写入。
 
+### 三、上机演练：基于_version进行乐观锁并发控制
+
+#### 1.kibana
+- 构造一条数据
+```
+http://localhost:5601/app/kibana
+
+PUT /test_index/test_type/1
+{
+  "test_field": "test value"
+}
+
+{
+  "_index": "test_index",
+  "_type": "test_type",
+  "_id": "1",
+  "_version": 1,
+  "result": "created",
+  "_shards": {
+    "total": 2,
+    "successful": 1,
+    "failed": 0
+  },
+  "created": true
+}
+```
+- 模拟两个客户端，都获取到同一条数据
+
+```
+GET /test_index/test_type/1
+
+{
+  "_index": "test_index",
+  "_type": "test_type",
+  "_id": "1",
+  "_version": 1,
+  "found": true,
+  "_source": {
+    "test_field": "test value"
+  }
+}
+```
+- 其中一个客户端，先更新数据
+>同时带上数据版本号，确保es中的数据版本号，跟客户端中的数据版本号是相同的，才能修改。
+```
+PUT /test_index/test_type/1?version=1 
+{
+  "test_field": "test client 1"
+}
+
+{
+  "_index": "test_index",
+  "_type": "test_type",
+  "_id": "1",
+  "_version": 2,
+  "result": "updated",
+  "_shards": {
+    "total": 2,
+    "successful": 1,
+    "failed": 0
+  },
+  "created": false
+}
+```
+- 另外一个客户端，尝试基于version=1的数据去修改，同样带上version版本号，进行乐观锁的并发控制
+```
+PUT /test_index/test_type/1?version=1 
+{
+  "test_field": "test client 2"
+}
+
+{
+  "error": {
+    "root_cause": [
+      {
+        "type": "version_conflict_engine_exception",
+        "reason": "[test_type][1]: version conflict, current version [2] is different than the one provided [1]",
+        "index_uuid": "y2nEh3rlTJu0N_zLKxsKxQ",
+        "shard": "3",
+        "index": "test_index"
+      }
+    ],
+    "type": "version_conflict_engine_exception",
+    "reason": "[test_type][1]: version conflict, current version [2] is different than the one provided [1]",
+    "index_uuid": "y2nEh3rlTJu0N_zLKxsKxQ",
+    "shard": "3",
+    "index": "test_index"
+  },
+  "status": 409
+}
+```
+- 在乐观锁成功阻止并发问题后，尝试正确的更新
+>基于最新的数据和版本号进行修改，修改后，带上最新的版本号，可能这个步骤需要反复执行好几次才能成功，特别在多线程并发更新同一条数据很频繁的情况下。
+
+PUT /test_index/test_type/7?version=2 
+```
+PUT /test_index/test_type/1?version=2
+{
+  "test_field": "test client 2"
+}
+
+{
+  "_index": "test_index",
+  "_type": "test_type",
+  "_id": "1",
+  "_version": 3,
+  "result": "updated",
+  "_shards": {
+    "total": 2,
+    "successful": 1,
+    "failed": 0
+  },
+  "created": false
+}
+```
