06 ES并发冲突问题v1.3
add图片&基于external version进行乐观锁并发控制

--- a/elasticsearch/practice/06 ES并发冲突问题.md
+++ b/elasticsearch/practice/06 ES并发冲突问题.md
@@ -11,6 +11,8 @@
 >>- ①有些场景下，不关心数据准确性。eg.若只是简单将数据写入ES，无论数据如何，都可以；甚至有些情况，算错了也可以。
 >>- ②当并发操作ES的线程越多，或并发请求越多，或读取一份数据供用户查询、操作时间越长，可能这段时间内数据在ES中已被修改，那我们拿到的就是旧数据，基于旧数据去操作，结果肯定错了。
 
+![image](https://raw.githubusercontent.com/nanphonfy/note-images/master/bigdata-cookbook/elasticsearch/practice/06/concurrency_conflict.png)
+
 - 普通ES操作流程：  
 >①先get document，商品信息，显示到网页，同时在内存中缓存该document数据；  
 ②当网页发起购买，直接基于内存的数据，进行计算和操作；  
@@ -29,6 +31,10 @@
 
 >线程B去判断当前数据的版本号：version=1，与es数据的版本号：version=2，是否相同。  
 版本号不同，说明数据已经被其他人修改过，此时用户B不会去更新，而是重新从es中读取最新的数据版本——99件，再次减1，变为98件，再执行上述流程，就可写入。
+
+![image](https://raw.githubusercontent.com/nanphonfy/note-images/master/bigdata-cookbook/elasticsearch/practice/06/pressimistic_lock.png)
+
+![image](https://raw.githubusercontent.com/nanphonfy/note-images/master/bigdata-cookbook/elasticsearch/practice/06/optimistic_lock.png)
 
 ### 三、上机演练：基于_version进行乐观锁并发控制
 
@@ -145,3 +151,20 @@ PUT /test_index/test_type/1?version=2
   "created": false
 }
 ```
+
+### 四、上机演练：基于external version进行乐观锁并发控制
+#### 1.external version
+>es提供了一个feature：可不用内部提供的_version版本号来进行并发控制，可以基于自己维护的版本号进行并发控制。eg.加入es的数据在mysql里也有一份，我们的应用系统本身也维护了一个版本号（无论是自己生成|程序控制）。
+进行乐观锁并发控制时，可能并不想用es内部的_version来进行控制，而是用自己维护的version来进行控制。
+
+`?version=1`  
+`?version=1&version_type=external`
+
+- version_type=external与前者区别
+>唯一区别:  
+_version——只有当提供的version与es中的_version一模一样时，才可进行修改，只要不一样，就报错；当version_type=external时，只有当提供的version比es中的_version大时，才能完成修改。  
+>>es，_version=1，?version=1，才能更新成功;  
+es，_version=1，?version>1&version_type=external，才能成功。
+
+- 先构造数据
+>
