06 ES并发冲突问题v1.5
partial update原理

--- a/elasticsearch/practice/06 ES并发冲突问题.md
+++ b/elasticsearch/practice/06 ES并发冲突问题.md
@@ -186,3 +186,35 @@ post /index/type/id/_update
 }
 ```
 >看起来比较方便，每次传递少数几个发生修改的field即可，不需将全量的document数据发送过去。
+
+#### 2、图解partial update实现原理以及其优点
+>partial update看起来很方便，实际内部的原理优点是什么？
+
+- ①查询，在界面上用户光修改可能10分钟，甚至半小时，修改后再回写，可能es的数据早就被人改了，所以并发冲突的情况就发生较多。  
+
+- ②查询、修改和写回都发生在shard内部，一瞬间就完成（毫秒级别），可大大较少并发冲突。  
+
+- ③partial update相较于全量替换的优点：  
+1.所有查询、修改和写回都发生在es中的一个shard内部，避免了所有的网络数据传输的开销（减少2次网络请求），大大提升性能；  
+2.减少了查询和修改中的时间间隔，可有效减少并发冲突的情况。
+
+>其实es内部对partial update的实际执行，跟传统的全量替换方式是几乎一样的。
+>>1.内部先获取document；  
+2.将传过来的field更新到document的json中；  
+3.将旧document标记为deleted；
+4.将修改后的新document创建出来。
+#### 3、上机演练partial update
+```
+PUT /test_index/test_type/10
+{
+  "test_field1": "test1",
+  "test_field2": "test2"
+}
+
+POST /test_index/test_type/10/_update
+{
+  "doc": {
+    "test_field2": "updated test2"
+  }
+}
+```
