--- a/elasticsearch/practice/06 ES并发冲突问题.md
+++ b/elasticsearch/practice/06 ES并发冲突问题.md
@@ -190,6 +190,8 @@ post /index/type/id/_update
 #### 2、图解partial update实现原理以及其优点
 >partial update看起来很方便，实际内部的原理优点是什么？
 
+![image](https://raw.githubusercontent.com/nanphonfy/note-images/master/bigdata-cookbook/elasticsearch/practice/06/partial_update.png)
+
 - ①查询，在界面上用户光修改可能10分钟，甚至半小时，修改后再回写，可能es的数据早就被人改了，所以并发冲突的情况就发生较多。  
 
 - ②查询、修改和写回都发生在shard内部，一瞬间就完成（毫秒级别），可大大较少并发冲突。  
@@ -218,3 +220,149 @@ POST /test_index/test_type/10/_update
   }
 }
 ```
+### 六、图解partial update乐观锁并发控原理
+partial update内部会自动执行我们之前所说的乐观锁并发控制策略。
+
+![image](https://raw.githubusercontent.com/nanphonfy/note-images/master/bigdata-cookbook/elasticsearch/practice/06/partial_update_principle)
+
+>- retry策略：  
+>>1.再次获取document数据和最新版本号；  
+2.基于最新版本号再去更新；  
+3.若失败，重复1和2两个步骤。可以通过retry参数值指定最多重复次数。
+
+### 七、mget批量查询
+#### 1、批量查询优点
+>一条条查询，若查100条数据，就要发100次网络请求，开销很大；  
+若批量查询，查100条数据只要发送1次网络请求，性能开销缩减100倍。
+
+#### 2、mget的语法
+- （1）一条一条的查询
+```
+GET /test_index/test_type/1
+GET /test_index/test_type/2
+```
+- （2）mget批量查询
+```
+GET /_mget
+{
+   "docs" : [
+      {
+         "_index" : "test_index",
+         "_type" :  "test_type",
+         "_id" :    1
+      },
+      {
+         "_index" : "test_index",
+         "_type" :  "test_type",
+         "_id" :    2
+      }
+   ]
+}
+
+{
+  "docs": [
+    {
+      "_index": "test_index",
+      "_type": "test_type",
+      "_id": "1",
+      "_version": 2,
+      "found": true,
+      "_source": {
+        "test_field1": "test field1",
+        "test_field2": "test field2"
+      }
+    },
+    {
+      "_index": "test_index",
+      "_type": "test_type",
+      "_id": "2",
+      "_version": 1,
+      "found": true,
+      "_source": {
+        "test_content": "my test"
+      }
+    }
+  ]
+}
+```
+- （3）若查询的document是index下的不同type
+```
+GET /test_index/_mget
+{
+   "docs" : [
+      {
+         "_type" :  "test_type",
+         "_id" :    1
+      },
+      {
+         "_type" :  "test_type",
+         "_id" :    2
+      }
+   ]
+}
+```
+- （4）若查询都在同一个index下的同一个type下，最简单了
+```
+GET /test_index/test_type/_mget
+{
+   "ids": [1, 2]
+}
+```
+#### 3、mget的重要性
+>一般在进行查询时，若一次性要查询多条数据，那一定要用batch批量操作的api，尽可能减少网络开销次数，将性能提升数倍，甚至数十倍，非常重要。  
+
+### 八、演练bulk批量增删改
+#### 1、bulk语法
+- POST /_bulk
+```
+{ "delete": { "_index": "test_index", "_type": "test_type", "_id": "3" }} 
+{ "create": { "_index": "test_index", "_type": "test_type", "_id": "12" }}
+{ "test_field": "test12" }
+{ "index":  { "_index": "test_index", "_type": "test_type", "_id": "2" }}
+{ "test_field":    "replaced test2" }
+{ "update": { "_index": "test_index", "_type": "test_type", "_id": "1", "_retry_on_conflict" : 3} }
+{ "doc" : {"test_field2" : "bulk test1"} }
+```
+- 每一个操作要两个json串，语法如下：
+>>{"action": {"metadata"}}  
+{"data"}
+
+>eg.要创建一个文档，放bulk里面，看起来会是这样子的：  
+>>{"index": {"_index": "test_index", "_type", "test_type", "_id": "1"}}  
+{"test_field1": "test1", "test_field2": "test2"}
+
+- 有哪些类型的操作可以执行呢？  
+>（1）delete：删除一个文档，只要1个json串就可以;  
+（2）create：PUT /index/type/id/_create，强制创建;  
+（3）index：普通的put操作，可以创建文档，也可全量替换文档;  
+（4）update：执行的partial update操作。
+
+>- bulk api对json语法，有严格的要求，每个json串不能换行，只能放一行，同时一个json串和一个json串之间，必须有一个换行；
+>- bulk操作中，任意一个操作失败，是不会影响其他操作的，但在返回结果里，会有异常日志。
+
+```
+POST /test_index/_bulk
+{ "delete": { "_type": "test_type", "_id": "3" }} 
+{ "create": { "_type": "test_type", "_id": "12" }}
+{ "test_field":    "test12" }
+{ "index":  { "_type": "test_type" }}
+{ "test_field":    "auto-generate id test" }
+{ "index":  { "_type": "test_type", "_id": "2" }}
+{ "test_field":    "replaced test2" }
+{ "update": { "_type": "test_type", "_id": "1", "_retry_on_conflict" : 3} }
+{ "doc" : {"test_field2" : "bulk test1"} }
+
+
+POST /test_index/test_type/_bulk
+{ "delete": { "_id": "3" }} 
+{ "create": { "_id": "12" }}
+{ "test_field":    "test12" }
+{ "index":  { }}
+{ "test_field":    "auto-generate id test" }
+{ "index":  { "_id": "2" }}
+{ "test_field":    "replaced test2" }
+{ "update": { "_id": "1", "_retry_on_conflict" : 3} }
+{ "doc" : {"test_field2" : "bulk test1"} }
+```
+#### 2、bulk size最佳大小
+>bulk request会加载到内存里，若太大性能反而会下降，因此需要反复尝试一个最佳的bulk size。一般从1000~5000条数据开始，尝试逐渐增加。另外，若看大小的话，最好是在5~15MB之间。
