06 ES并发冲突问题v1.7
总结

--- a/elasticsearch/practice/06 ES并发冲突问题.md
+++ b/elasticsearch/practice/06 ES并发冲突问题.md
@@ -366,3 +366,25 @@ POST /test_index/test_type/_bulk
 ```
 #### 2、bulk size最佳大小
 >bulk request会加载到内存里，若太大性能反而会下降，因此需要反复尝试一个最佳的bulk size。一般从1000~5000条数据开始，尝试逐渐增加。另外，若看大小的话，最好是在5~15MB之间。
+
+### 九、总结
+>01、02：快速入门最基本的原理、操作;  
+03、04：深入剖析ES分布式基本原理;  
+05、06：围绕document进行操作、讲解和分析.
+
+#### 1、什么是distributed document store
+>目前已经知道es是分布式的，包括一些基本原理、学习document相关的操作——增删改查。es的最核心功能，已经相对完整地写完了。
+
+>Elasticsearch启动后，第一个最核心的功能：一个分布式的文档数据存储系统。——文档数据、存储系统。
+>>- 文档数据：es可以存储和操作json文档类型的数据(es的核心数据结构)。  
+>>- 存储系统：es可以对json文档类型的数据进行存储、查询、创建、更新、删除等操作。ES满足了这些功能，可以说已经是一个NoSQL的存储系统了。
+
+>围绕着document的操作，其实就是把es当成了一个NoSQL存储引擎，一个可以存储文档类型数据的存储系统，在操作里面的document。  
+es可以作为一个分布式的文档存储系统，所以我们的应用系统就可以基于这个概念去进行相关的应用程序开发了。
+
+- 什么类型的应用程序呢？
+>（1）数据量较大，es的分布式本质，可以快速扩容，承载大量数据;  
+（2）数据结构灵活多变，随时可能会变化，且数据结构间的关系，非常复杂，如果用传统数据库，要面临大量的表;  
+（3）对数据的相关操作较为简单，eg.简单的CRUD，用之前讲解的document操作就可搞定;  
+（4）NoSQL数据库，适用的也是类似于上面的这种场景.
+>>eg.一些网站系统或普通电商系统、博客系统，面向对象概念较复杂，但作为终端网站来说，没什么太复杂的功能，就是一些简单的CRUD操作，而且数据量可能较大。这时选用ES这种NoSQL型的数据存储，比传统的复杂功能支持SQL的关系型数据库，更加合适一些。无论是性能，还是吞吐量，可能都会更好。
